test/scc_test/stmt/semantic-errors/034.a
034.t:3:10: error: label 'a' used but not defined